# Autonomous-Human-Following-Mobile-Robot

./: README.md  _config.yml  index.md  markdown_kitchen_sink.md  package.xml  setup.py
docs/: _config.yml  index.md
docs/project/: index.md
docs/project/m1/: index.md
person_follower/: follow_controller.py  human_detector_node.py  package.xml  person_follower.py  range_bearing_estimator.py  safety_supervisor.py  setup.py  sim_person_publisher.py  stationary_demo.py  target_tracker.py
person_follower/launch/: person_follower.launch.py
person_follower/person_follower/: follower_node.py
person_follower/test/: test_smoke.py
project/: index.md  report1.md  report2.md  report3.md
